Refactor: rename tip handler funcs
