# internal/api/routes/handlers/v1/tip/handler.go
@@ -25,7 +25,20 @@ func New(svc service.TipServicer, log *log.Logger) *TipHandler {
 	}
 }
 
-func (h *TipHandler) CreateTip(ctx *fiber.Ctx) error {
+// Create godoc
+//
+//	@Summary		Create tip
+//	@Description	Create tip
+//	@Tags			Tips
+//	@Accept			json
+//	@Produce		json
+//	@Param			tip	body		dto.CreateTip	true	"tip"
+//	@Success		200	{object}	handlers.HTTPSuccess
+//	@Failure		400	{object}	handlers.HTTPError
+//	@Failure		500	{object}	handlers.HTTPError
+//	@Router			/tips [post]
+//	@Security		Bearer
+func (h *TipHandler) Create(ctx *fiber.Ctx) error {
 	var payload *dto.CreateTip
 	if err := common.ParseBodyAndValidate(ctx, &payload); err != nil {
 		if err, ok := err.(validator.ValidationErrors); ok {
@@ -46,7 +59,20 @@ func (h *TipHandler) CreateTip(ctx *fiber.Ctx) error {
 	return ctx.JSON(handlers.HTTPSuccess{Success: true, Data: handlers.Data{"tip": result}})
 }
 
-func (h *TipHandler) FindTipByID(ctx *fiber.Ctx) error {
+// FindOne godoc
+//
+//	@Summary		Find tip by id
+//	@Description	Find tip by id
+//	@Tags			Tips
+//	@Accept			json
+//	@Produce		json
+//	@Param			id_tip	path		int	true	"tip id"
+//	@Success		200		{object}	handlers.HTTPSuccess
+//	@Failure		400		{object}	handlers.HTTPError
+//	@Failure		404		{object}	handlers.HTTPError
+//	@Failure		500		{object}	handlers.HTTPError
+//	@Router			/tips/{id_tip} [get]
+func (h *TipHandler) FindOne(ctx *fiber.Ctx) error {
 	id := ctx.Locals(context.TipID).(int)
 	result, err := h.svc.FindTipByID(ctx.Context(), id)
 	if err != nil {
@@ -56,7 +82,19 @@ func (h *TipHandler) FindTipByID(ctx *fiber.Ctx) error {
 	return ctx.JSON(handlers.HTTPSuccess{Success: true, Data: handlers.Data{"tip": result}})
 }
 
-func (h *TipHandler) FindTips(ctx *fiber.Ctx) error {
+// FindMany godoc
+//
+//	@Summary		Find many tips
+//	@Description	Find many tips
+//	@Tags			Tips
+//	@Accept			json
+//	@Produce		json
+//	@Param			filter	query		dto.TipFilter	true	"filter"
+//	@Success		200		{object}	handlers.HTTPSuccess
+//	@Failure		400		{object}	handlers.HTTPError
+//	@Failure		500		{object}	handlers.HTTPError
+//	@Router			/tips [get]
+func (h *TipHandler) FindMany(ctx *fiber.Ctx) error {
 	filter := new(dto.TipFilter)
 	if err := common.ParseFilterAndValidate(ctx, filter); err != nil {
 		if err, ok := err.(validator.ValidationErrors); ok {
@@ -85,7 +123,22 @@ func (h *TipHandler) FindTips(ctx *fiber.Ctx) error {
 	)
 }
 
-func (h *TipHandler) UpdateTip(ctx *fiber.Ctx) error {
+// Update godoc
+//
+//	@Summary		Update tip
+//	@Description	Update tip
+//	@Tags			Tips
+//	@Accept			json
+//	@Produce		json
+//	@Param			id_tip	path		int				true	"tip id"
+//	@Param			tip		body		dto.UpdateTip	true	"tip"
+//	@Success		200		{object}	handlers.HTTPSuccess
+//	@Failure		400		{object}	handlers.HTTPError
+//	@Failure		404		{object}	handlers.HTTPError
+//	@Failure		500		{object}	handlers.HTTPError
+//	@Router			/tips/{id_tip} [put]
+//	@Security		Bearer
+func (h *TipHandler) Update(ctx *fiber.Ctx) error {
 	id := ctx.Locals(context.TipID).(int)
 	payload := new(dto.UpdateTip)
 	if err := common.ParseBodyAndValidate(ctx, &payload); err != nil {
@@ -106,7 +159,21 @@ func (h *TipHandler) UpdateTip(ctx *fiber.Ctx) error {
 	return ctx.JSON(handlers.HTTPSuccess{Success: true})
 }
 
-func (h *TipHandler) DeleteTip(ctx *fiber.Ctx) error {
+// Delete godoc
+//
+//	@Summary		Delete tip
+//	@Description	Delete tip
+//	@Tags			Tips
+//	@Accept			json
+//	@Produce		json
+//	@Param			id_tip	path		int	true	"tip id"
+//	@Success		200		{object}	handlers.HTTPSuccess
+//	@Failure		400		{object}	handlers.HTTPError
+//	@Failure		404		{object}	handlers.HTTPError
+//	@Failure		500		{object}	handlers.HTTPError
+//	@Router			/tips/{id_tip} [delete]
+//	@Security		Bearer
+func (h *TipHandler) Delete(ctx *fiber.Ctx) error {
 	id := ctx.Locals(context.TipID).(int)
 	if err := h.svc.DeleteTip(ctx.Context(), id); err != nil {
 		h.log.ServerError(ctx, err)
@@ -116,7 +183,20 @@ func (h *TipHandler) DeleteTip(ctx *fiber.Ctx) error {
 	return ctx.JSON(handlers.HTTPSuccess{Success: true})
 }
 
-func (h *TipHandler) RestoreTip(ctx *fiber.Ctx) error {
+// Restore godoc
+//
+//	@Summary		Restore tip
+//	@Description	Restore tip
+//	@Tags			Tips
+//	@Accept			json
+//	@Produce		json
+//	@Param			id_tip	path		int	true	"tip id"
+//	@Success		200		{object}	handlers.HTTPSuccess
+//	@Failure		400		{object}	handlers.HTTPError
+//	@Failure		404		{object}	handlers.HTTPError
+//	@Failure		500		{object}	handlers.HTTPError
+//	@Router			/tips/{id_tip} [patch]
+func (h *TipHandler) Restore(ctx *fiber.Ctx) error {
 	id := ctx.Locals(context.TipID).(int)
 	if err := h.svc.RestoreTip(ctx.Context(), id); err != nil {
 		h.log.ServerError(ctx, err)
@@ -126,7 +206,20 @@ func (h *TipHandler) RestoreTip(ctx *fiber.Ctx) error {
 	return ctx.JSON(handlers.HTTPSuccess{Success: true})
 }
 
-func (h *TipHandler) FindTipStorages(ctx *fiber.Ctx) error {
+// FindStorages godoc
+//
+//	@Summary		Find storages
+//	@Description	Find storages
+//	@Tags			Tips
+//	@Accept			json
+//	@Produce		json
+//	@Param			id_tip	path		int	true	"tip id"
+//	@Success		200		{object}	handlers.HTTPSuccess
+//	@Failure		400		{object}	handlers.HTTPError
+//	@Failure		404		{object}	handlers.HTTPError
+//	@Failure		500		{object}	handlers.HTTPError
+//	@Router			/tips/{id_tip}/storages [get]
+func (h *TipHandler) FindStorages(ctx *fiber.Ctx) error {
 	id := ctx.Locals(context.TipID).(int)
 	result, err := h.svc.FindTipStorages(ctx.Context(), id)
 	if err != nil {
@@ -136,8 +229,20 @@ func (h *TipHandler) FindTipStorages(ctx *fiber.Ctx) error {
 	}
 	return ctx.JSON(handlers.HTTPSuccess{Success: true, Data: handlers.Data{"storages": result}})
 }
-
-func (h *TipHandler) FindTipProducts(ctx *fiber.Ctx) error {
+// FindProducts godoc
+//
+//	@Summary		Find products
+//	@Description	Find products
+//	@Tags			Tips
+//	@Accept			json
+//	@Produce		json
+//	@Param			id_tip	path		int	true	"tip id"
+//	@Success		200		{object}	handlers.HTTPSuccess
+//	@Failure		400		{object}	handlers.HTTPError
+//	@Failure		404		{object}	handlers.HTTPError
+//	@Failure		500		{object}	handlers.HTTPError
+//	@Router			/tips/{id_tip}/products [get]
+func (h *TipHandler) FindProducts(ctx *fiber.Ctx) error {
 	id := ctx.Locals(context.TipID).(int)
 	result, err := h.svc.FindTipProducts(ctx.Context(), id)
 	if err != nil {
@@ -147,8 +252,22 @@ func (h *TipHandler) FindTipProducts(ctx *fiber.Ctx) error {
 	}
 	return ctx.JSON(handlers.HTTPSuccess{Success: true, Data: handlers.Data{"products": result}})
 }
-
-func (h *TipHandler) AddProductToTip(ctx *fiber.Ctx) error {
+// AddProduct godoc
+//
+//	@Summary		Add product
+//	@Description	Add product
+//	@Tags			Tips
+//	@Accept			json
+//	@Produce		json
+//	@Param			id_tip		path		int	true	"tip id"
+//	@Param			id_product	path		int	true	"product id"
+//	@Success		200			{object}	handlers.HTTPSuccess
+//	@Failure		400			{object}	handlers.HTTPError
+//	@Failure		404			{object}	handlers.HTTPError
+//	@Failure		500			{object}	handlers.HTTPError
+//	@Router			/tips/{id_tip}/products/{id_product} [post]
+//	@Security		Bearer
+func (h *TipHandler) AddProduct(ctx *fiber.Ctx) error {
 	tipID := ctx.Locals(context.TipID).(int)
 	productID := ctx.Locals(context.ProductID).(int)
 	result, err := h.svc.AddProductToTip(ctx.Context(), tipID, productID)
@@ -159,8 +278,22 @@ func (h *TipHandler) AddProductToTip(ctx *fiber.Ctx) error {
 	}
 	return ctx.JSON(handlers.HTTPSuccess{Success: true, Data: handlers.Data{"product": result}})
 }
-
-func (h *TipHandler) RemoveProductFromTip(ctx *fiber.Ctx) error {
+// RemoveProduct godoc
+//
+//	@Summary		Remove product
+//	@Description	Remove product
+//	@Tags			Tips
+//	@Accept			json
+//	@Produce		json
+//	@Param			id_tip		path		int	true	"tip id"
+//	@Param			id_product	path		int	true	"product id"
+//	@Success		200			{object}	handlers.HTTPSuccess
+//	@Failure		400			{object}	handlers.HTTPError
+//	@Failure		404			{object}	handlers.HTTPError
+//	@Failure		500			{object}	handlers.HTTPError
+//	@Router			/tips/{id_tip}/products/{id_product} [delete]
+//	@Security		Bearer 
+func (h *TipHandler) RemoveProduct(ctx *fiber.Ctx) error {
 	tipID := ctx.Locals(context.TipID).(int)
 	productID := ctx.Locals(context.ProductID).(int)
 	if err := h.svc.RemoveProductFromTip(ctx.Context(), tipID, productID); err != nil {
@@ -171,7 +304,22 @@ func (h *TipHandler) RemoveProductFromTip(ctx *fiber.Ctx) error {
 	return ctx.JSON(handlers.HTTPSuccess{Success: true})
 }
 
-func (h *TipHandler) AddStorageToTip(ctx *fiber.Ctx) error {
+// AddStorage godoc
+//
+//	@Summary		Add storage
+//	@Description	Add storage
+//	@Tags			Tips
+//	@Accept			json
+//	@Produce		json
+//	@Param			id_tip		path		int	true	"tip id"
+//	@Param			id_storage	path		int	true	"storage id"
+//	@Success		200			{object}	handlers.HTTPSuccess
+//	@Failure		400			{object}	handlers.HTTPError
+//	@Failure		404			{object}	handlers.HTTPError
+//	@Failure		500			{object}	handlers.HTTPError
+//	@Router			/tips/{id_tip}/storages/{id_storage} [post]
+//	@Security		Bearer
+func (h *TipHandler) AddStorage(ctx *fiber.Ctx) error {
 	tipID := ctx.Locals(context.TipID).(int)
 	storateID := ctx.Locals(context.StorageID).(int)
 	result, err := h.svc.AddStorageToTip(ctx.Context(), tipID, storateID)
@@ -183,7 +331,22 @@ func (h *TipHandler) AddStorageToTip(ctx *fiber.Ctx) error {
 	return ctx.JSON(handlers.HTTPSuccess{Success: true, Data: handlers.Data{"storage": result}})
 }
 
-func (h *TipHandler) RemoveStorageFromTip(ctx *fiber.Ctx) error {
+// RemoveStorage godoc
+//
+//	@Summary		Remove storage
+//	@Description	Remove storage
+//	@Tags			Tips
+//	@Accept			json
+//	@Produce		json
+//	@Param			id_tip		path		int	true	"tip id"
+//	@Param			id_storage	path		int	true	"storage id"
+//	@Success		200			{object}	handlers.HTTPSuccess
+//	@Failure		400			{object}	handlers.HTTPError
+//	@Failure		404			{object}	handlers.HTTPError
+//	@Failure		500			{object}	handlers.HTTPError
+//	@Router			/tips/{id_tip}/storages/{id_storage} [delete]
+//	@Security		Bearer
+func (h *TipHandler) RemoveStorage(ctx *fiber.Ctx) error {
 	tipID := ctx.Locals(context.TipID).(int)
 	storateID := ctx.Locals(context.StorageID).(int)
 	if err := h.svc.RemoveStorageFromTip(ctx.Context(), tipID, storateID); err != nil {
